--- a/Day_2_session_2.Rmd
+++ b/Day_2_session_2.Rmd
@@ -9,3 +9,42 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+## Derivatives in R
+
+```{r}
+fx <- expression(x^2)
+
+df_dx <- D(expr = fx, name = 'x')
+
+df_dx
+
+# Evaluate the slope of f(x) at x = 831
+
+x <- seq(from = -10, to = 10, by = 0.5)
+
+eval(expr = df_dx)
+```
+```{r}
+gt <- expression(3 * t ^ 2 - 4 * cos(t))
+
+dg_dt <- D(expr = gt, name = 't')
+
+dg_dt
+```
+```{r}
+gb <- expression(exp(x))
+
+dg_db <- D(expr = gb, name = 'x')
+
+dg_db
+```
+```{r}
+fn <- expression((n ^ 9) * 120 * n)
+
+df_dn <- D(expr = fn, name = 'n')
+
+n <- 322
+
+eval(expr = df_dn)
+```
+
