--- a/EDS-212-day2-task/derivatives-in-R.Rmd
+++ b/EDS-212-day2-task/derivatives-in-R.Rmd
@@ -60,6 +60,54 @@ dg_dz <- D(expr = gz, name = 'z')
 dg_dz
 ```
 
+### ^^ checked by hand - answers match
 
+## Partial Derivatives
+
+```{r}
+f_xyz <- expression(2 * (x ^ 2) * y - 3 * x + 1 + 4 * (z ^ 4) * x)
+
+df_dx <- D(expr = f_xyz, 'x')
+
+df_dy <- D(expr = f_xyz, 'y')
+
+df_dz <- D(expr = f_xyz, 'z')
+```
+
+## Make some plots
+
+#### Part 1
+
+```{r}
+funktion <- function(x) {2.4 * exp(-0.05 * x) * sin(x)}
+
+ggplot(data = data.frame(x = c(-0.5, 0.5)), aes(x = x)) + 
+  stat_function(fun = funktion)
+```
+
+#### Part 2
+
+
+```{r}
+ggplot(data = penguins, aes(x = bill_length_mm, y = bill_depth_mm)) +
+  geom_point(aes(color = species)) +
+  labs(
+    x = "Bill Length (mm)", 
+    y = "Bill Depth (mm)",
+    title = "Penguin Bill Length vs Bill Depth")
+  
+```
+
+#### Jitterplot
+
+```{r}
+ggplot(data = penguins, aes(x = species, y = flipper_length_mm)) +
+  geom_jitter() +
+  labs(
+    x = "Species",
+    y = "Flipper Length (mm)",
+    title = "Flipper lengths of three penguin specices"
+  )
+```
 
 
